<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:background="@color/purplishLight"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ProductSearchFragment">

    <TextView
        android:id="@+id/product_search_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Product Search"
        android:textColor="#551A8B"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/prodcatprompt_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodcat_prompt"
            android:textSize="14sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="10sp" />

        <RadioGroup
            android:id="@+id/ProdCat_RadioGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/prodcatprompt_Tv">
            <RadioButton
                android:id="@+id/NA_RadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_NA"
                android:buttonTint="@color/purplishDark"/>
            <RadioButton
                android:id="@+id/CE_RadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_CE"
                android:buttonTint="@color/purplishDark"/>
            <RadioButton
                android:id="@+id/CA_RadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_CA"
                android:buttonTint="@color/purplishDark"/>
            <RadioButton
                android:id="@+id/DAP_RadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_DAP"
                android:buttonTint="@color/purplishDark"/>
        </RadioGroup>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">
        <TextView
            android:id="@+id/prodList_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_prompt"
            android:textSize="14sp"/>
        <Spinner
            android:id="@+id/prodList_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/product_prompt"
            android:layout_alignBaseline="@id/prodList_Tv"
            android:layout_toRightOf="@id/prodList_Tv" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/prodcod_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodcod_prompt"
            android:textSize="14sp"
            android:layout_marginTop="15sp" />

        <EditText
            android:id="@+id/prodCode_Et"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:padding="5sp"
            android:inputType="textCapCharacters"
            android:backgroundTint="@color/purplishDark"
            android:layout_toRightOf="@id/prodcod_Tv"/>
    </RelativeLayout>

    <Button
        android:id="@+id/prodSearchSubmit_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="30sp"
        android:padding="10sp"
        android:text="Search"
        android:drawablePadding="5sp"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/progress_Pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/purplishDark"
        style="@style/Widget.AppCompat.ProgressBar"/>
</LinearLayout>
</ScrollView>